# mctruth_based_study

./: CMakeLists.txt  README.md  test.root
kenji/macro/cc0pi/: kinematics_dist.cc  kinematics_dist.cc~  particle_kinematics.cc  particle_kinematics.cc~  plot_basic_dist.cc  plot_basic_dist.cc~  plot_basic_dist2.cc~
scripts/: run_mctruth.sh  run_pmmc_250.sh  submit.pl  submit_mc.pl
src/: CMakeLists.txt  main.cpp
src/cc0pi/: CMakeLists.txt  CMakeLists.txt~  EventMap.cpp  EventMap.cpp~  EventMap.hpp  EventMap.hpp~  EventSelection.cpp~  EventSelection.hpp  EventSelection.hpp~  Particle.hpp~  ParticleTrack.cpp  ParticleTrack.cpp~  ParticleTrack.hpp  ParticleTrack.hpp~  SignalEnum.cpp  SignalEnum.cpp~  SignalEnum.hpp  SignalEnum.hpp~  Test.cpp  Test.cpp~  Test.hpp  Topology.cpp~  Topology.hpp~
